fixtures/errors/array_length_invalid.js
const a = [1, 2, 3];
a.length = 2.5;